froggy-gaming/src/HomepageLayout/navigationBar/assets/scss/dropdown.scss
@import "../../../../variable";

.category {
    position: absolute;
    width: 100%;
    top: calc(100% + 1rem);
    left: -3rem;
    z-index: 3;
    display: none;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;

    &-icon {
        transition: all 200ms ease-in-out;
    }

    &-link,
    &-menu {
        background: white;
    }

    &-grid {
        float: left;
        clear: both;
    }

    &-link {
        color: black;
        text-decoration: none;
        outline: none;
        width: 20rem;
        display: flex;
        justify-content: space-between;
        padding: 1.6rem;
        font-weight: 400;
        position: relative;

        &.selected {
            .category-icon {
                transform: translateX(2rem);
                opacity: 0;
                visibility: hidden;
            }
        }

        &:not(:last-of-type) {

            border-bottom: 1px solid #ededed;
        }

        &:hover {
            background: $primary2;
            color: white;

            .category-icon {
                transform: translateX(2rem);
                opacity: 0;
                visibility: hidden;
            }


            +.category-menu {
                opacity: 1;
                visibility: visible;
            }
        }
    }

    &-list {
        list-style-type: none;
        position: relative;
    }

    &-menu {
        position: absolute;
        width: 694px;
        list-style-type: none;
        color: black;
        opacity: 0;
        visibility: hidden;
        left: 200px;
        top: 0;
        height: 100%;
        padding: 1rem;
        display: flex;
        flex-wrap: wrap;
        column-gap: 4.5rem;
        row-gap: 1rem;
        overflow: hidden;

        &::after {
            content: "";
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 80%;
            background: $secondary2;
            transform: skew(-18deg);
            z-index: 0;
        }

        &::before {
            background-image: url("https://i.ibb.co/m5Kk7v8/Alloy-origin-core-6-compressed-removebg-preview.png");
            position: absolute;
            content: "";
            top: 50%;
            right: 1rem;
            transform: translateY(-50%);
            z-index: 2;
            width: 150px;
            height: 150px;
            background-size: cover;
            background-repeat: no-repeat;
        }



        &:hover {
            opacity: 1;
            visibility: visible;
        }
    }

    &-name {
        color: $secondary2;
        font-size: 1.5rem;
    }

    &-choice {
        font-size: 1.3rem;

        &:hover {
            color: transparent;
            background-image: linear-gradient(to right, $primary2 30%, $secondary 60%, $secondary 100%);
            -webkit-background-clip: text;
            background-clip: text;
            -webkit-text-fill-color: transparent;
        }
    }

}

@media screen and (max-width: 1024px) {
    .category {
        display: none;

        &-link {
            display: none;
        }
    }
}

